# super_nice_1m

./: pyproject.toml
app/: docker-compose.yml
app/account/: Dockerfile  account_service.py  binance_fees.py  requirements.txt
app/data/: Dockerfile  data_service.py
app/order/: order_service.py
app/strategy/: Dockerfile  strategy_service.py
app/visualize/: Dockerfile  visualization_service.py
backtest/: back1.py  btc_trade_history.csv
core/: backtest.py  backtest_results.csv  data.py  trade.py
