[project]
name = "super-nice-1m"
version = "0.1.0"
description = ""
authors = [
    {name = "erosnguyen",email = "cuong123go@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ta (>=0.11.0,<0.12.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "mplfinance (>=0.12.10b0,<0.13.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
